<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Twitter Client</string>
    <!-- menu -->
    <string name="menu_compose">Compose</string>
    <string name="menu_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <!-- activity title -->
    <string name="title_activity_timeline">Timeline</string>
    <string name="title_activity_compose"></string>
    <string name="title_activity_profile">Profile</string>

    <!-- layout.login -->
    <string name="login_label">Connect to Twitter</string>
    <!-- layout.timeline -->
    <string name="user_name">User Name</string>
    <string name="tweet_content">Tweet Content</string>
    <string name="user_screenname">User ID</string>
    <!-- layout.compose -->
    <string name="tweet">TWEET</string>
    <string name="my_screen_name">\@screen_name</string>
    <string name="tweet_hint">What\'s happening?</string>
    <!-- layout.profile -->
    <string name="followers">%d followers</string>
    <string name="following">%d following</string>

</resources>