<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_screenname"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/tvUserName"
        android:layout_toRightOf="@+id/tvUserName"
        android:layout_toEndOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_content"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_below="@+id/tvUserName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTime"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="10dp" />


</RelativeLayout>