<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.simpletwitterclient.activities.ComposeActivity">

    <ImageView
        android:id="@+id/ivMyProfileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/tvMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivMyProfileImage"
        android:layout_toEndOf="@+id/ivMyProfileImage"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_screen_name"
        android:id="@+id/tvMyScreenName"
        android:layout_below="@+id/tvMyName"
        android:layout_alignLeft="@+id/tvMyName"
        android:layout_alignStart="@+id/tvMyName"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTweet"
        android:layout_below="@+id/ivMyProfileImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:hint="@string/tweet_hint" />
</RelativeLayout>
